30_applications/mapper/deploy/mapper_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapper-server
  namespace: mapper
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: mapper
    app.kubernetes.io/name: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: mapper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: mapper
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: mapper-server
          image: ghcr.io/bcnoexceptions/mapper-server:0.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    echo "Copying db from local storage back to NFS..."
                    cp -a /mapper/db/. /mapper/db-nfs/
                    echo "Copy complete."
          volumeMounts:
            - name: db-local
              mountPath: /mapper/db
            - name: db-nfs
              mountPath: /mapper/db-nfs
      volumes:
        - name: db-nfs
          persistentVolumeClaim:
            claimName: mapper-server-db
        - name: db-local
          emptyDir: {}
