30_applications/mapper/deploy/mapper_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapper-server
  namespace: mapper
  labels:
    app.kubernetes.io/instance: mapper
    app.kubernetes.io/name: server
spec:
  selector:
    app.kubernetes.io/instance: mapper
    app.kubernetes.io/name: server
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
